--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "php": "^8.2",
         "symfony/http-foundation": "^6.3",
-        "symfony/routing": "^6.3"
+        "symfony/routing": "^6.3",
+        "symfony/http-kernel": "^6.3"
     },
     "autoload": {
         "psr-4": {
